[gd_scene load_steps=7 format=3 uid="uid://ctjy3u3ibtlhy"]

[ext_resource type="Script" uid="uid://dpmbsgths4ity" path="res://scenes/GameScene.gd" id="1_xs4ih"]
[ext_resource type="Texture2D" uid="uid://dtvlvwwpp6ye4" path="res://shared/mesa_fondo.png" id="2_vijgj"]
[ext_resource type="PackedScene" uid="uid://dgkd0y78x6rf1" path="res://decks/Deck.tscn" id="4_pynjx"]
[ext_resource type="PackedScene" uid="uid://cjs5q57kt6swi" path="res://cards/Virado.tscn" id="6_6ytau"]
[ext_resource type="PackedScene" uid="uid://vs6t0jiloxra" path="res://scenes/FourPlayersHandsDisplay.tscn" id="6_xs4ih"]
[ext_resource type="PackedScene" uid="uid://qabh3xjf55ow" path="res://ui/TeamScoreLabels.tscn" id="8_vijgj"]

[node name="Main" type="Node2D"]
script = ExtResource("1_xs4ih")

[node name="MesaFondo" type="Sprite2D" parent="."]
position = Vector2(575, 322.5)
scale = Vector2(0.748698, 0.635742)
texture = ExtResource("2_vijgj")

[node name="PlayCardButton" type="Button" parent="."]
offset_left = 897.0
offset_top = 541.0
offset_right = 1050.0
offset_bottom = 625.0
text = "JUGAR CARTA"

[node name="Carta seleccionada" type="Label" parent="."]
offset_left = 432.0
offset_top = 471.0
offset_right = 582.0
offset_bottom = 494.0
text = "Carta seleccionada:"

[node name="CardShuffler" parent="." instance=ExtResource("4_pynjx")]

[node name="PlayerName" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "FOO"

[node name="TurnLabel" type="Label" parent="."]
offset_left = 897.0
offset_right = 982.0
offset_bottom = 23.0
text = "Es tu turno"

[node name="Virado" parent="." instance=ExtResource("6_6ytau")]
position = Vector2(181, 23)
scale = Vector2(0.7, 0.7)

[node name="Team1Score" parent="." instance=ExtResource("8_vijgj")]
position = Vector2(181, 206)
scale = Vector2(0.7, 0.7)

[node name="Team2Score" parent="." instance=ExtResource("8_vijgj")]
position = Vector2(663, 206)
scale = Vector2(0.7, 0.7)

[node name="FourPlayersHandsDisplay" parent="." instance=ExtResource("6_xs4ih")]

[connection signal="pressed" from="PlayCardButton" to="." method="_on_play_card_button_pressed"]
